apps/qui/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: qui
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qui
  namespace: qui
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qui.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: qui
          port: 7476
  tls:
    secretName: qui-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qui-http
  namespace: qui
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`qui.lab.jackhumes.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: qui
          port: 7476
